--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/Sumanmhalsank02/mywebclass-simulation#readme",
   "devDependencies": {
-    "@playwright/test": "^1.31.1",
+    "@playwright/test": "^1.32.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
     "bootstrap": "^5.2.3",
@@ -47,7 +47,9 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-webpack-plugin": "^2.4.2",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "playwright": "^1.32.1",
     "postcss-loader": "^7.0.2",
     "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.58.3",
@@ -62,9 +64,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6"
   },
-
   "overrides": {
     "graceful-fs": "^4.2.10"
   }
-
-  }
+}
