FIXED: Playwright TEST

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "type": "git",
     "url": "git+https://github.com/Sumanmhalsank02/mywebclass-simulation.git"
   },
-  "author": "Suman S Mhalsank @ NJIT.EDU",
+  "author": "Keith Williams @ NJIT.EDU",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Sumanmhalsank02/mywebclass-simulation/issues"
